Front - Fix mac window botton spacing

--- a/app/public/scss/style.scss
+++ b/app/public/scss/style.scss
@@ -101,7 +101,7 @@ body, html {
         li {
             position: relative;
             display: inline-block;
-            margin-left: 10px;
+            margin-left: 9px;
             line-height: 11px;
             width: 11px;
             height: 11px;
